Setup TestFX and make example test #56